# find_rejects

./: .gitignore  pyproject.toml
find_rejects/scripts/: find_rejects.py
find_rejects/src/: servers.csv
tests/: test_find_rejects.py
