[tool.poetry]
name = "find_rejects"
version = "0.1.0"
description = ""
authors = ["Xoma <xomyakes@gmail.com>"]
packages = [
    { include "find_rejects"},
]

[tool.poetry.scripts]
find_rejects = "find_rejects.scripts.find_rejects:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
